# book-explorer

./: .gitignore  README.md
backend/: .env.example  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements.txt
backend/accounts/: serializers.py  urls.py  views.py
backend/accounts/management/commands/: create_test_users.py
backend/accounts/migrations/: 0001_create_test_users.py
backend/accounts/tests/: test_views.py
backend/book_explorer/: exceptions.py  settings.py  urls.py
backend/books/: admin.py  helpers.py  models.py  pagination.py  serializers.py  urls.py  views.py
backend/books/migrations/: 0001_initial.py  0002_initial_data.py  0003_usernote.py  0004_alter_book_author_alter_book_book_type_and_more.py
backend/books/tests/: test_notes.py  test_views.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  AuthLayout.tsx  MainLayout.tsx  index.css
frontend/src/api/: auth.ts  client.ts  types.ts
frontend/src/components/: BookSkeleton.tsx  Button.tsx  Card.tsx  Dropdown.tsx  Header.tsx  Input.tsx  Loader.tsx  Note.tsx  Pagination.tsx
frontend/src/hooks/: types.d.ts  useAuth.ts  useBooks.ts  useCurrentUser.ts  useNotes.ts
frontend/src/pages/: BookDetails.tsx  Home.tsx  Login.tsx
frontend/src/utils/: constants.ts
