package-mode = false

[project]
name = "book-explorer-backend"
version = "0.1.0"
description = "Django REST API for the Book Explorer application (books, notes, authentication)."
authors = [
    { name = "Adna Tucak", email = "adnatucakkodzaga@gmail.com" },
]
readme = "README.md"
license = { text = "Proprietary - for take-home assignment use only" }
requires-python = ">=3.9,<3.13"
dependencies = [
    "asgiref (==3.11.0)",
    "django (==4.2.27)",
    "django-cors-headers (==4.9.0)",
    "djangorestframework (==3.16.1)",
    "django-filter (==25.1)",
    "djangorestframework-simplejwt (==5.3.1)",
    "pillow (==11.3.0)",
    "python-dotenv (==1.0.0)",
    "sqlparse (==0.5.5)",
    "typing-extensions (==4.15.0)",
    "pytest (==8.3.3)",
    "pytest-django (==4.8.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
